fix and add pagina dto